# GPON

./: .dockerignore  .env.example  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  M114_sfp_ODI_231021_HGU.tar  QUIRKS.md  README.md  coverage.md  dashboard.json  docker-compose.exporter-only.yml  docker-compose.yml  gpon_exporter.py  gpon_grafana_dashboard.json  hsgq_prometheus_collector.py  odi.service  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
Prometheus/: README.md
compose/: prometheus.yml
compose/grafana/provisioning/dashboards/: gpon.yml
compose/grafana/provisioning/datasources/: prometheus.yml
docs/: COVERAGE.md  MIGRATION.md  QUIRKS.md  TROUBLESHOOTING.md  omcicli_probes.md
tests/: conftest.py  test_dashboard_metrics.py  test_device_parsing.py  test_fetch_pipeline.py  test_host_key_policy.py  test_no_credential_leaks.py  test_omci_disabled.py  test_parsers.py
